# agentic_research_engine

./: .gitignore  Setup.md  app.py  main.py
scientific_paper_agent_langgraph/: .env.example  pyproject.toml
scientific_paper_agent_langgraph/src/: __init__.py  config.py  state.py  tools.py
src/: graph.py  prompts.py  schemas.py  utils.py
