[project]
name = "scientific-paper-agent-langgraph"
version = "0.1.0"
description = "Scientific paper research assistant using LangGraph and Gemini"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.3.0",
    "langchain-community>=0.4.0",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.2.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "urllib3>=2.0.0",
    "streamlit>=1.30.0",
]
